<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Menu">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:onClick="logout"
        android:text="Log Out" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/men"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="EnviarDatosPlato1"
            android:visibility="visible">

            <ImageView
                android:id="@+id/imgV1"
                android:layout_width="48dp"
                android:layout_height="180dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:onClick="EnviarDatosPlato1"
                app:srcCompat="@drawable/seco_guanta" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtProd1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:gravity="center|center_vertical"
                    android:text="@string/producto1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cod1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/txtPrecio1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/prodprecio1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <ImageView
                android:id="@+id/imgV2"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="EnviarDatosPlato2"
                app:srcCompat="@drawable/hamburguesa" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtprod2"
                    android:layout_width="match_parent"
                    android:layout_height="59dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/producto2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cod2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_2"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/txtprecio2"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:gravity="center_horizontal"
                    android:text="@string/proprecio2"
                    android:textSize="18sp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="EnviarDatosPlato3">

            <ImageView
                android:id="@+id/imgV3"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:onClick="EnviarDatosPlato3"
                app:srcCompat="@drawable/fritada" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtProd3"
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/producto3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cod3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_3"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/txtprecio3"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:gravity="center_horizontal"
                    android:text="@string/proprecio3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="EnviarDatosPlato4">

            <ImageView
                android:id="@+id/imgV4"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="EnviarDatosPlato4"
                app:srcCompat="@drawable/helado" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtProd4"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/producto4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cod4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtPrecio4"
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:gravity="center_horizontal"
                    android:text="@string/proprecio4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textSize="18sp" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
</ScrollView>