<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Pedido">

    <TextView
        android:id="@+id/txtCarrito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:text="@string/pedido"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        tools:text="Tu Carrito" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/se_entregar_aqui"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="193dp"
        android:layout_height="209dp"
        android:layout_gravity="center|center_horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/txtTuPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tu_pedido"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        android:textStyle="bold" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <ListView
        android:id="@+id/listV"
        android:layout_width="match_parent"
        android:layout_height="303dp"
        android:layout_weight="1">

    </ListView>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:text="Total a pagar"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtTotalPagar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout4">

        <View
            android:id="@+id/divider3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="170dp"
            android:layout_height="35dp"
            android:background="@drawable/button_background"
            android:text="@string/regresar"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:layout_conversion_absoluteHeight="60dp"
            tools:layout_conversion_absoluteWidth="206dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="671dp" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnConfPed"
            android:layout_width="181dp"
            android:layout_height="35dp"
            android:background="@drawable/button_background"
            android:text="@string/confirmar_pedido"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:layout_conversion_absoluteHeight="60dp"
            tools:layout_conversion_absoluteWidth="206dp"
            tools:layout_editor_absoluteX="206dp"
            tools:layout_editor_absoluteY="671dp" />

        <View
            android:id="@+id/divider4"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />
    </LinearLayout>

</LinearLayout>